Changes in 0.61.2:
  * Dependency resolution didn't enforce label acls.
  * Module arguments to commitaction are parsed according to shell
    quoting rules.
  * The changemail commitaction module now takes an optional '--from'
    argument.
  * added clearBuildReqs() - will clear all or some of superclass buildreqs
    when cooking.
  * The pickled version of Dependency objects changed, therefore the
    schema version of the changeset cache has been incremented.
  * When Configure() detects a failure and input or output is not a
    tty, all config.log files will be included in the output in order
    to ease debugging from captured log files.
  * Part of the infrastructure for adding users and groups has been added:
    it is possible to create info-<name>:{user,group} packages via
    UserInfoRecipe and GroupInfoRecipe classes.  The User(), Group(),
    and SupplementalGroup() policies are deprecated; those lines should
    move to their own recipes intact (the syntax remains the same).
    The install-time code does not yet install info-* packages first in
    their own transaction; when it does, the Ownership(), UtilizeUser(),
    and UtilizeGroup() policies will create dependencies on the
    appropriate info-* packages.

Changes in 0.61.1:
  * Cleaned up error message which results from Conary not being able to
    determine which trove to remove when a new one is installed
  * Dependency object use slots
  * Hash values for DependencySet, Version, and Branch objects are cached
  * UIDs and GIDs that cannot be mapped to symbolic names no
    longer cause the buildpackage code to traceback.  The ownerships
    from the filesystem were never used anyway, so it's safe to assume
    that all files are owned by root:root
  * Implemented proper updateall
  * Files in troves are downloadable from the repository browser.
  * Troves in the repository browser are separated by first letter
    instead of showing all troves in one page.

Changes in 0.61.0: